--- a/.github/workflows/reguwatch.yml
+++ b/.github/workflows/reguwatch.yml
@@ -84,7 +84,7 @@ jobs:
           git commit -m "Daily: snapshots/state/report [skip ci]" || echo "No changes to commit"
           git push
 
-      - name: Open/Update daily summary issue
+      - name: Open/Update daily summary issue (then close)
         uses: actions/github-script@v7
         with:
           script: |
@@ -93,15 +93,41 @@ jobs:
             const path = `reports/${date}/daily-summary.md`;
             const body = fs.readFileSync(path, 'utf8');
 
-            // Offene Daily-Issues mit Label 'daily-summary' prüfen
-            const { data: existing } = await github.rest.issues.listForRepo({
+            // 1) Offene Daily-Issues für heute suchen
+            const { data: existingOpen } = await github.rest.issues.listForRepo({
               owner: context.repo.owner,
               repo: context.repo.repo,
               state: 'open',
               labels: 'daily-summary'
             });
 
-            for (const is of existing) {
+            for (const is of existingOpen) {
+              if (is.title.includes(date)) {
+                // aktualisieren + schließen
+                await github.rest.issues.update({
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  issue_number: is.number,
+                  body,
+                });
+                await github.rest.issues.update({
+                  owner: context.repo.owner,
+                  repo: context.repo.repo,
+                  issue_number: is.number,
+                  state: 'closed'
+                });
+                return;
+              }
+            }
+
+            // 2) Falls es schon ein geschlossenes Daily von heute gibt: aktualisieren + geschlossen lassen
+            const { data: existingClosed } = await github.rest.issues.listForRepo({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              state: 'closed',
+              labels: 'daily-summary'
+            });
+            for (const is of existingClosed) {
               if (is.title.includes(date)) {
                 await github.rest.issues.update({
                   owner: context.repo.owner,
@@ -109,14 +135,22 @@ jobs:
                   issue_number: is.number,
                   body
                 });
+                // geschlossen lassen
                 return;
               }
             }
 
-            await github.rest.issues.create({
+            // 3) Neues Daily-Issue erstellen (Mail wird verschickt) … und direkt schließen
+            const created = await github.rest.issues.create({
               owner: context.repo.owner,
               repo: context.repo.repo,
               title: `ReguWatch Daily Summary ${date}`,
               body,
               labels: ['daily-summary']
+            });
+            await github.rest.issues.update({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: created.data.number,
+              state: 'closed'
             });
